<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zmq.com.fragment.SputumReportSubmitFragment">


    <!-- TODO: Update blank fragment layout -->

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:weightSum="10">

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/linear1"

        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_patient_id"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/edt_patient_id_1"
            android:textAllCaps="true"/>

        <Button
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:id="@+id/btn_submit1"
            android:background="@color/colorDmcPrimary"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>
    </LinearLayout>


    <LinearLayout

        android:id="@+id/linear2"
        android:padding="10dp"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:orientation="vertical">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/txt_patient_id" />

            <EditText
                android:id="@+id/edt_patient_id_2"
                android:enabled="false"
                android:layout_width="0dp"
                android:textSize="13dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dip"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLines="1">

            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/txt_name_patient" />

            <EditText

                android:id="@+id/edt_p_name"
                android:enabled="false"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dip"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1" >

            </EditText>
        </TableRow>

            <TableRow
                android:id="@+id/tableRow44"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txt_44"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_examine_date" />

                <Spinner
                    android:id="@+id/spinner_examin_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:dropDownWidth="wrap_content"
                    android:entries="@array/appearance_type"
                    android:maxLines="1" >
                </Spinner>
            </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"

                android:text="@string/txt_report_date" />

            <TextView
                android:id="@+id/txt_sputum_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_examin_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight=".5"
                android:background="@android:drawable/ic_menu_today" />
        </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txt_4"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_visual_appearance" />

                <Spinner
                    android:id="@+id/spinner_appearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:dropDownWidth="wrap_content"
                    android:entries="@array/appearance_type"
                    android:maxLines="1" >
                </Spinner>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txt_5"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_result" />

                <Spinner
                    android:id="@+id/spinner_result"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:dropDownWidth="wrap_content"
                    android:entries="@array/result_type"
                    android:maxLines="1" >
                </Spinner>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txt_6"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_positive_grading" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New RadioButton"
                    android:id="@+id/radioGroup"
                    android:paddingLeft="20dp"
                    android:layout_column="1" >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton1"
                        android:checked="true"
                        android:text="@string/txt_3_positive" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton2"
                        android:text="@string/txt_2_positive" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton3"
                        android:text="@string/txt_1_positive" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton4"
                        android:text="@string/txt_scanty" />

                    <EditText
                        android:visibility="gone"
                        android:id="@+id/edt_scanty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dip"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="numberSigned"
                        android:maxLines="1" >

                    </EditText>

                    </RadioGroup>


            </TableRow>


            <Button
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit"
                android:id="@+id/btn_submit2"
                android:background="@color/colorDmcPrimary"
                android:textColor="@android:color/white"
                android:textAllCaps="false"/>
        </TableLayout>
        </ScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
