<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zmq.com.fragment.SputumReportSubmitFragment">


    <!-- TODO: Update blank fragment layout -->

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">


        <LinearLayout

            android:id="@+id/linear2"
            android:padding="10dp"
            android:visibility="visible"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="left"
                    android:orientation="vertical">

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/txt_prmnt_reg_name" />

                        <EditText
                            android:enabled="false"
                            android:id="@+id/edt_p_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0dip"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="text"
                            android:maxLines="1" >

                        </EditText>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_2"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_prmnt_reg_sex" />

                        <Spinner
                            android:id="@+id/spinner_sex"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:dropDownWidth="wrap_content"
                            android:entries="@array/sex_category"
                            android:maxLines="1" >
                        </Spinner>
                    </TableRow>


                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/txt_prmnt_reg_age" />

                        <EditText
                            android:id="@+id/edt_age"

                            android:layout_width="0dp"
                            android:textSize="13dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dip"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:maxLines="1">

                        </EditText>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_4"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_prmnt_reg_category" />

                        <Spinner
                            android:id="@+id/spinner_regiem"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:dropDownWidth="wrap_content"
                            android:entries="@array/regiem_category"
                            android:maxLines="1" >
                        </Spinner>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow5"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_5"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_prmnt_reg_disease" />

                        <Spinner
                            android:id="@+id/spinner_disease"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:dropDownWidth="wrap_content"
                            android:entries="@array/disease_type"
                            android:maxLines="1" >
                        </Spinner>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow6"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_6"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_prmnt_reg_p_type" />

                        <Spinner
                            android:id="@+id/spinner_ptype"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:dropDownWidth="wrap_content"
                            android:entries="@array/patient_type"
                            android:maxLines="1" >
                        </Spinner>
                    </TableRow>

                    <EditText
                        android:id="@+id/edt_others"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:textSize="13dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dip"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:maxLines="1">

                    </EditText>

                    <TableRow
                        android:id="@+id/tableRow7"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/txt_prmnt_reg_remarks" />

                        <EditText
                            android:id="@+id/edt_remrks"

                            android:layout_width="0dp"
                            android:textSize="13dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dip"
                            android:layout_weight="1"
                            android:inputType="text"
                            android:maxLines="1">

                        </EditText>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow8"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_8"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"

                            android:text="@string/txt_prmnt_reg_date" />

                        <TextView
                            android:id="@+id/txt_reg_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Button
                            android:id="@+id/btn_reg_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_weight=".5"
                            android:background="@android:drawable/ic_menu_today" />
                    </TableRow>

                    <Button
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_register"
                        android:id="@+id/btn_mophi_register"
                        android:background="@color/colorMOPHIPrimary"
                        android:textColor="@android:color/white"
                        android:textAllCaps="false"/>
                </TableLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
